--- a/style.css
+++ b/style.css
@@ -55,8 +55,10 @@ opacity: 0.75;
 }
 
 #logo {
-padding: 25px 0 0 10px;
-margin-bottom: 30px;
+    width: 90px;
+    height: 32px;
+    padding: 25px 0 0 10px;
+    margin-bottom: 30px;
 
 }
 
@@ -84,11 +86,14 @@ left: 192px;
 }
 
 .searchbar {
+    text-align: center;
     border-radius: 24px;
     border:1px solid #dfe1e5;
     border-width: 1.3px;
-    width: 460px;
+    width: 690px;
     margin: 0 auto;
+    position: relative;
+    right: 55px;
 }
 
 .searchbar:hover {
