--- a/style.css
+++ b/style.css
@@ -35,17 +35,53 @@ li {
 }
 
 .t-left {
-float: left;
-padding-left: 21px;
-opacity: 0.75;
+ float: left;
+ padding-left: 21px;
+ opacity: 0.75;
+ display: inline-block;
 
+}
+
+.searchbar {
+    text-align: center;
+    border-radius: 24px;
+    border:1px solid #dfe1e5;
+    border-width: 1.3px;
+    width: 690px;
+    margin: 0 auto;
+
+}
+
+input[type=text] {
+    outline:none;
+    border: none;
+    font-size: 16px;
+    width: 360px;
+    height: 35px;
 }
 
 .t-right {
     float: right;
-    padding-right: 15px;
+    padding-right: 21px;
     opacity: 0.75;
+    position: relative;
+    bottom: 35px;
+    display: inline-block;
 
+
+}
+
+.sign-in {
+    background: #1a73e8;
+    margin: 11px 4px;
+    min-width: 96px;
+    padding: 9px 23px;
+    border-radius: 4px;
+    border: 1px solid #f2f2f2;
+    height: 36px;
+    color: #fff;
+    margin-top: 0px;
+    cursor: pointer;
 }
 
 .center {
@@ -57,8 +93,6 @@ opacity: 0.75;
 #logo {
     width: 90px;
     height: 32px;
-    padding: 25px 0 0 10px;
-    margin-bottom: 30px;
 
 }
 
@@ -85,42 +119,12 @@ left: 192px;
 
 }
 
-.searchbar {
-    text-align: center;
-    border-radius: 24px;
-    border:1px solid #dfe1e5;
-    border-width: 1.3px;
-    width: 690px;
-    margin: 0 auto;
-    position: relative;
-    right: 55px;
-}
 
 .searchbar:hover {
     border-color: rgba(223,225,229,0);
     box-shadow: 0 1px 6px rgba(32,33,36,.28);
 }
-
-input[type=text] {
-    outline:none;
-    border: none;
-    font-size: 16px;
-    width: 360px;
-    height: 35px;
-}
-
-input[type=submit] {
-    margin: 11px 4px;
-    padding: 0px 16px;
-    border-radius: 4px;
-    border: 1px solid #f2f2f2;
-    height: 36px;
-    color:  #5F6368;
-    background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
-    margin-top: 0px;
-    cursor: pointer;
     
-}
 
 input[type=submit]:hover {
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
