--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ li {
     display: inline;
 }
 
+
 .t-left {
  float: left;
- padding-left: 21px;
+ padding-left: 25px;
  opacity: 0.75;
- display: inline-block;
 
 }
 
@@ -48,7 +48,8 @@ li {
     border:1px solid #dfe1e5;
     border-width: 1.3px;
     width: 690px;
-    margin: 0 auto;
+    position: relative;
+    left: 15px;
 
 }
 
@@ -65,10 +66,13 @@ input[type=text] {
     padding-right: 21px;
     opacity: 0.75;
     position: relative;
-    bottom: 35px;
-    display: inline-block;
 
 
+}
+
+.squares {
+    position: relative;
+    top: 100px;
 }
 
 .sign-in {
