--- a/style.css
+++ b/style.css
@@ -29,9 +29,12 @@ ul {
     margin: 22px 0 0 0;
 }
 
+#tnav {
+  display: flex;
+  justify-content: flex-end;
+}
 
 .t-left {
- float: left;
  padding-left: 25px;
  opacity: 0.75;
  display: inline;
@@ -58,7 +61,7 @@ input[type=text] {
 }
 
 .t-right {
-    float: right;
+  
     padding-right: 21px;
     opacity: 0.75;
     position: relative;
@@ -69,24 +72,21 @@ input[type=text] {
 .squares {
     position: relative;
     top: 100px;
+    justify-content: flex-end;
 }
 
 .sign-in {
     background: #1a73e8;
-    margin: 11px 4px;
     min-width: 96px;
     padding: 9px 23px;
     border-radius: 4px;
     border: 1px solid #f2f2f2;
-    height: 36px;
     color: #fff;
-    margin-top: 0px;
     cursor: pointer;
 }
 
 #ltnav {
-    text-align: left;
-}
+    text-align: left;}
 
 .lt-mid {
     display: inline;
@@ -124,4 +124,3 @@ p {
     padding-left: 27px;
     position: relative;
     top: 10px;
-
