--- a/style.css
+++ b/style.css
@@ -217,12 +217,24 @@ input[type=submit]:hover {
 }
 
 #also-search-for-box-2 {
-    width: 600px;
+    width: 652px;
+    height: 324px;
     margin: 20px auto auto 160px;
-    display: flex;
+    font-size: 18px;
+    color: #222;
     line-height: 1.7;
     border:1px solid #dadce0;
     border-width: 1.3px;
     border-radius: 8px;
     padding: 12px 15px 4px 15px;
+    display: flex;
+}
+
+#also-search-containers {
+    width: 98px;
+    height: 133px;
+    border:1px solid #dadce0;
+    border-width: 1.3px;
+    border-radius: 8px;
+
 }
