--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ input[type=submit]:hover {
 
 #also-search-for-box-2 {
     width: 652px;
-    height: 324px;
+    height: 270px;
     margin: 20px auto auto 160px;
     font-size: 18px;
     color: #222;
@@ -227,14 +227,71 @@ input[type=submit]:hover {
     border-width: 1.3px;
     border-radius: 8px;
     padding: 12px 15px 4px 15px;
-    display: flex;
+    
 }
 
-#also-search-containers {
-    width: 98px;
+#shop-logo-boxes-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+#shop-logo-boxes {
+    width: 103px;
     height: 133px;
     border:1px solid #dadce0;
     border-width: 1.3px;
     border-radius: 8px;
+    box-sizing: border-box;
+    padding-left: 6px;
+    text-align: left;
+    line-height: 16.5;
+    font-size: 14px;
+    position: relative;
+    top: 27px;
+    display: flex;
+}
 
+.shop-logo {
+    width: 96px;
+    height: 96px;
+    position: relative;
+    right: 55px;
+}
+#see-more-container {
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    top: 50px;
+}
+
+#see-more {
+    height: 36px;
+    width: 300px;
+    border:1px solid #dadce0;
+    border-radius: 18px;
+    color: #1a0dab;
+    font-size: 14px;
+    line-height: 2.5;
+    text-align: center;
+}
+
+.arrow-icon {
+    width:15px;
+    height: 15px;
+    position: relative;
+    right: 95px;
+    top: 3px
+
+}
+
+#also-search-for-box-footer {
+    width: 600px;
+    display: flex;
+    line-height: 1.7;
+    margin: 7px;
+ 
+}
+.also-box-right-footer {
+    background-position: relative;
+    left: 200px;
 }
