--- a/style.css
+++ b/style.css
@@ -303,6 +303,18 @@ input[type=submit]:hover {
     
 }
 
+#next-page-nav-two {
+    width:650px;
+    height: 85px;
+    color: #4285f4;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    position: relative;
+    bottom: 72px;
+}
+
 #logo-next-page {
     cursor: pointer;
     margin-top:5px;
@@ -311,14 +323,12 @@ input[type=submit]:hover {
 #arrow-icon-two {
     width:15px;
     height: 15px;
+    position: relative;
+    right:5px;
+    top: 10px
 }
 
-#next-page-nav-two {
- width: 600px;
- height: 100px;
- display: flex;
-flex-direction: column;
-}
+
 
 .page-numbers {
  display: inline;
